Fix code incompatible with java 17